--- a/dada/extras/documentation/pod_source/features-subscriber_fields.pod
+++ b/dada/extras/documentation/pod_source/features-subscriber_fields.pod
@@ -2,19 +2,9 @@
 
 =head1 Subscriber Profile Fields
 
-=head1 Introduction
-
-Extra subscribers fields in Dada Mail has been basically the #1 requested feature in the program and now it's actually a part of Dada Mail and not vaporware. 
-
-Enjoy! 
-
-Like many of the features in Dada Mail, we've tried to create a good balance of dead-simple to use and highly configurable. The Subscriber Profile Fields project is a very large feature with a lot of interesting ways we can take it. We're starting out simple and easy, but we'd like to know what certain features are important to you - so let us know via our email, the dadadev mailing list and the support boards (L<http://dadamailproject.com/support/boards>)
-
 =head1 Implementation
 
-The extra Subscriber Profile Fields in Dada Mail are saved in the C<dada_subscribers> table. Right now, there's a limit of 100 extra columns and each column is given the data type of, C<text>. 
-
-Pretty simple stuff.
+The extra Subscriber Profile Fields in Dada Mail are saved in the C<dada_profiles> table. Right now, there's a limit of 100 extra columns and each column is given the data type of, C<text>. 
 
 =head1 Requirements
 
@@ -22,7 +12,7 @@ The Subscriber Profile Fields feature in Dada Mail requires that you use one of 
 
 =head1 Downgrading
 
-Most likely, if you ever have to I<downgrade> Dada Mail, these extra fields shouldn't hurt too much to keep around. From my tests, Dada Mail will simply just ignore the extra fields. There's no way to use these extra fields in any way for any version of Dada Mail under 2.11 (The alpha series). 
+Most likely, if you ever have to I<downgrade> Dada Mail, these extra fields shouldn't hurt too much to keep around. From my tests, Dada Mail will simply just ignore the extra fields. 
 
 =head1 Using 
 
@@ -34,22 +24,11 @@ This screen will allow you to add/remove the Subscriber Profile Fields. This scr
 
 The fallback value is saved in the dada_settings table in the B<fallback_field_values> setting. 
 
-Please note that removing any Subscriber Profile Fields will B<permanently delete all the information that once was saved in this particular field>. 
+Please note that removing any Subscriber Profile Fields will B<permanently delete all the information that once was saved in this particular field for ALL Mailing Lists>. 
 
-Hazzah. 
-
-
-And we mean it. 
-
-The other thing to note is that Subscriber Profile Fields are B<global>, meaning, they'll be there for each list Dada Mail manages. 
+The other thing to note is that Subscriber Profile Fields are B<GLOBAL>, meaning, they'll be there for each Mailing List that Dada Mail manages. 
 
 You can also add a subscriber field in Dada Mail by just adding a new column to the dada_subscribers table yourself via SQL. I would be careful doing so, since you'll curcumvent any checks that are done via the list control panel, but you're open to and Dada Mail will see your new columns as new subscription fields.
-
-Dada Mail currently doesn't support changing the order of these Subscriber Profile Fields, but if you feel mighty, you may do this yourself via SQL. If you had two Subscriber Profile Fields, one called, "last_name" and one called, "first_name" and you'd like "first_name" come before, "last_name", you'd want to say do something like: 
-
- ALTER TABLE dada_subscribers MODIFY COLUMN last_name text AFTER first_name;
-
-(This is for MySQL 5 - consult your own SQL server implementation... thingy) 
 
 =head2 Mail Merging
 
@@ -100,49 +79,43 @@ Because of this, you will no longer be able to use complete confirmaton URLS, (U
 
 =head2 The Subscription Form Template
 
-Every single instance of the subscription form is handled by one template file, living in the dada/DADA/Template/templates directory called, B<subscription_form_widget.tmpl>. Changes to this file will affect every instance of the subscription form in the program. 
-
-This file also takes the place of the two files: 
-
-=over
-
-=item * list_popup_subscription_form.tmpl
-
-=item * list_subscribe_form.tmpl
-
-=back
+Every single instance of the subscription form is handled by one template file, living in the dada/DADA/Template/templates directory called, C<subscription_form_widget.tmpl>. Changes to this file will affect every instance of the subscription form in the program. 
 
 =head2 Importing Subscribers
 
-You may add subscribers into your list via the list control panel. Under, B<Manage List>, click, B<Add>. 
-
-Several changes have been made from previous versions of the program. 
-
-In versions past, you were able to basically put in email addresses you wanted added in a free form way. 
-
-Not so in 3.0. 
-
-In Dada Mail 3.0, the file type you need to import your subscribers in must be in CSV format. The order of the fields in that CSV format should be displayed at the top of the screen. 
+The file type you need to import your subscribers in must be in CSV format. The order of the fields in that CSV format should be displayed at the top of the screen. 
 
 =head2 Editing Individual Subscriber Information
 
 You can edit an individual's subscriber information in the list control. Under, B<Your Subscribers>, click on, B<View>. You'll be presented with a table of your subscribers, with all their subscription information. Clicking on the email address of the subscriber will bring you to a screen to edit the subscription information. Pretty simple. 
 
-Currently, subscribers can not edit their own individual information.
-
 =head1 See Also
 
-=head2 Technical Documentation
-
-The nerdy Perl API has changed drastically (and probably, for the better) in 3.0. Most likely, if you had a custom Perl program for Dada Mail 2.x that was using the API, it has now been broken. 
+=head2 Technical Documentation 
 
 =head3 Subscriber Backend
 
-For the Mailing List Subscriber API do consult: 
+=head4 DADA::MailingList::Subscribers
 
 L<http://dadamailproject.com/support/documentation/MailingList_Subscribers.pm.html>
 
-Which should be fairly complete. 
+=head3 Profiles 
+
+=head4 Dada::Profile
+
+L<http://dadamailproject.com/support/documentation/Profile.pm.html>
+
+=head4 DADA::Profile::Fields
+
+L<http://dadamailproject.com/support/documentation/Profile_Fields.pm.html>
+
+=head4 DADA::Profile::Session
+
+L<http://dadamailproject.com/support/documentation/Profile_Session.pm.html>
+
+=head4 DADA::ProfileFieldsManager
+
+L<http://dadamailproject.com/support/documentation/ProfileFieldsManager.pm.html>
 
 =head3 Templating System
 
